k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: php-fpm
    qcloud-app: php-fpm
  name: php-fpm
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: php-fpm
      qcloud-app: php-fpm
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: php-fpm
        qcloud-app: php-fpm
    spec:
      affinity: {}
      containers:
      - env:
        - name: PATH
          value: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
        - name: PHPIZE_DEPS
          value: "autoconf \t\tdpkg-dev \t\tfile \t\tg++ \t\tgcc \t\tlibc-dev \t\tmake
            \t\tpkg-config \t\tre2c"
        - name: PHP_INI_DIR
          value: /usr/local/etc/php
        - name: PHP_EXTRA_CONFIGURE_ARGS
          value: --enable-fpm --with-fpm-user=www-data --with-fpm-group=www-data --disable-cgi
        - name: PHP_CFLAGS
          value: -fstack-protector-strong -fpic -fpie -O2 -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
        - name: PHP_CPPFLAGS
          value: -fstack-protector-strong -fpic -fpie -O2 -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
        - name: PHP_LDFLAGS
          value: -Wl,-O1 -pie
        - name: GPG_KEYS
          value: 1729F83938DA44E27BA0F4D3DBDB397470D12172 BFDDD28642824F8118EF77909B67A5C12229118F
        - name: PHP_VERSION
          value: 8.0.3
        - name: PHP_URL
          value: https://www.php.net/distributions/php-8.0.3.tar.xz
        - name: PHP_ASC_URL
          value: https://www.php.net/distributions/php-8.0.3.tar.xz.asc
        - name: PHP_SHA256
          value: c9816aa9745a9695672951eaff3a35ca5eddcb9cacf87a4f04b9fb1169010251
        image: <your image>
        imagePullPolicy: IfNotPresent
        name: php
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 256Mi
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: <your image pull secret>
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
