k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: php-fpm
    qcloud-app: php-fpm
  name: php-fpm
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: 9000-9000-tcp
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    k8s-app: php-fpm
    qcloud-app: php-fpm
  type: ClusterIP
